# visionTouchSurfaceLib

./: CMakeLists.txt  LICENSE  README.md  index.html  mainPage.dox
doc/web/: _leap_8h.html  _leap_8h__dep__incl.map  _leap_8h__dep__incl.md5  _leap_8h__incl.map  _leap_8h__incl.md5  _leap_8h_source.html  _leap_math_8h.html  _leap_math_8h__dep__incl.map  _leap_math_8h__dep__incl.md5  _leap_math_8h__incl.map  _leap_math_8h__incl.md5  _leap_math_8h_source.html  _r_e_a_d_m_e_8md.html  alttabeventmanager_8cpp.html  alttabeventmanager_8cpp__incl.map  alttabeventmanager_8cpp__incl.md5  alttabeventmanager_8h.html  alttabeventmanager_8h__dep__incl.map  alttabeventmanager_8h__dep__incl.md5  alttabeventmanager_8h__incl.map  alttabeventmanager_8h__incl.md5  alttabeventmanager_8h_source.html  annotated.html  class_alt_tab_event_manager-members.html  class_alt_tab_event_manager.html  class_alt_tab_event_manager__coll__graph.map  class_alt_tab_event_manager__coll__graph.md5  class_double_swipe_manager-members.html  class_double_swipe_manager.html  class_double_swipe_manager__coll__graph.map  class_double_swipe_manager__coll__graph.md5  class_double_swipe_manager__inherit__graph.map  class_double_swipe_manager__inherit__graph.md5  class_event_data-members.html  class_event_data.html  class_event_data__coll__graph.map  class_event_data__coll__graph.md5  class_finger-members.html  class_finger.html  class_finger__coll__graph.md5  (+538 more)
doc/web/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_79.js  all_7a.js  classes_61.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_67.js  classes_68.js  classes_69.js  classes_6b.js  classes_6c.js  classes_6d.js  classes_70.js  classes_73.js  classes_74.js  classes_76.js  defines_6c.js  (+78 more)
vts_gestures/: CMakeLists.txt
vts_gestures/include/: doubleswipemanager.h  gesturemanager.h  monitorhandsmanager.h  swipemanager.h  tappingmanager.h
vts_gestures/src/: doubleswipemanager.cpp  gesturemanager.cpp  monitorhandsmanager.cpp  swipemanager.cpp  tappingmanager.cpp
vts_ioevents/: CMakeLists.txt
vts_ioevents/include/: alttabeventmanager.h  ioeventmanager.h  scrollupdownmanager.h  singleclickholdeventmanager.h  storehandmask.h
vts_ioevents/src/: alttabeventmanager.cpp  ioeventmanager.cpp  scrollupdownmanager.cpp  singleclickholdeventmanager.cpp  storehandmask.cpp
vts_sensors/: CMakeLists.txt
vts_sensors/include/: kinecthandler.h  leaphandler.h  leapmapping.h  projectivemapping.h
vts_sensors/src/: kinecthandler.cpp  leaphandler.cpp  leapmapping.cpp  projectivemapping.cpp
vts_utils/: CMakeLists.txt
vts_utils/include/: eventdata.h  finger.h  fourierdescriptor.h  framedata.h  hand.h  kalmanfilteringswipe.h  visionprocessor.h
vts_utils/src/: eventdata.cpp  finger.cpp  fourierdescriptor.cpp  framedata.cpp  hand.cpp  kalmanfilteringswipe.cpp  visionprocessor.cpp
